--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,5 +1,5 @@
 ---
-import { SITE_TITLE, SITE_DESCRIPTION, SITE_URL, SITE_AUTHOR, SITE_AUTHOR_TWITTER } from '../consts/site';
+import { SITE_TITLE, SITE_DESCRIPTION, SITE_URL, SITE_AUTHOR, SITE_AUTHOR_TWITTER, GTM_ID } from '../consts/site';
 
 interface Props {
 	title?: string;
@@ -41,6 +41,12 @@ const ogImage = new URL(image, Astro.site || SITE_URL);
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 <link rel="dns-prefetch" href="https://images.unsplash.com" />
 <link rel="preconnect" href="https://images.unsplash.com" crossorigin />
+{GTM_ID && (
+	<>
+		<link rel="preconnect" href="https://www.googletagmanager.com" />
+		<link rel="dns-prefetch" href="https://www.googletagmanager.com" />
+	</>
+)}
 
 <!-- Canonical URL -->
 <link rel="canonical" href={canonicalURL} />
@@ -116,4 +122,15 @@ const ogImage = new URL(image, Astro.site || SITE_URL);
 		},
 		"inLanguage": "en-US"
 	})} />
+)}
+
+<!-- Google Tag Manager -->
+{GTM_ID && (
+	<script is:inline define:vars={{ gtmId: GTM_ID }}>
+		(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+		new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+		j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+		'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+		})(window,document,'script','dataLayer',gtmId);
+	</script>
 )}
