--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,6 +2,7 @@
 import BaseHead from '../components/BaseHead.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
+import { GTM_ID } from '../consts/site';
 import '../styles/global.css';
 
 interface Props {
@@ -31,6 +32,17 @@ const { title, description, type, publishedTime, modifiedTime, tags, image } = A
 		/>
 	</head>
 	<body>
+		{GTM_ID && (
+			<noscript>
+				<iframe
+					src={`https://www.googletagmanager.com/ns.html?id=${GTM_ID}`}
+					height="0"
+					width="0"
+					style="display:none;visibility:hidden"
+					aria-hidden="true"
+				></iframe>
+			</noscript>
+		)}
 		<a href="#main-content" class="sr-only focus:absolute focus:top-4 focus:left-4 focus:z-50 focus:w-auto focus:h-auto focus:p-2 focus:m-0 focus:overflow-visible focus:clip-auto focus:whitespace-normal focus:px-4 focus:py-2 focus:bg-zinc-50 focus:text-zinc-950 focus:rounded-full focus:outline-none focus:ring-2 focus:ring-zinc-400">
 			Skip to main content
 		</a>
