--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -178,7 +178,7 @@ const postsData = allPosts.map(post => ({
 			return `
 				<article class="group relative flex flex-col sm:flex-row gap-6 sm:items-stretch">
 					${post.heroImage ? `
-						<a href="/blog/${post.slug}/" class="relative aspect-square w-full sm:w-40 shrink-0 overflow-hidden rounded-xl bg-zinc-800 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-zinc-400 focus-visible:ring-offset-2 focus-visible:ring-offset-zinc-950">
+						<a href="/blog/${post.slug}/" class="relative aspect-video sm:aspect-square w-full sm:w-40 shrink-0 overflow-hidden rounded-xl bg-zinc-800 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-zinc-400 focus-visible:ring-offset-2 focus-visible:ring-offset-zinc-950">
 							<img
 								src="${post.heroImage}"
 								alt="${post.title} - Featured image"
@@ -208,7 +208,7 @@ const postsData = allPosts.map(post => ({
 							</p>
 						</div>
 						${post.tags.length > 0 ? `
-							<div class="flex gap-2 flex-wrap">
+							<div class="flex gap-2 flex-wrap mt-3 sm:mt-0">
 								${post.tags.map(tag => `
 									<button
 										data-filter-tag="${tag}"
