--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -78,7 +78,7 @@ function calculateReadingTime(content: string): number {
 				return (
 					<article class="group relative flex flex-col sm:flex-row gap-6 sm:items-stretch">
 						{post.data.heroImage && (
-							<a href={`/blog/${post.slug}/`} class="relative aspect-square w-full sm:w-40 shrink-0 overflow-hidden rounded-xl bg-zinc-800 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-zinc-400 focus-visible:ring-offset-2 focus-visible:ring-offset-zinc-950">
+							<a href={`/blog/${post.slug}/`} class="relative aspect-video sm:aspect-square w-full sm:w-40 shrink-0 overflow-hidden rounded-xl bg-zinc-800 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-zinc-400 focus-visible:ring-offset-2 focus-visible:ring-offset-zinc-950">
 							<img
 								src={post.data.heroImage}
 								alt={`${post.data.title} - Featured image`}
@@ -114,7 +114,7 @@ function calculateReadingTime(content: string): number {
 								</p>
 							</div>
 							{post.data.tags && post.data.tags.length > 0 && (
-								<div class="flex gap-2 flex-wrap">
+								<div class="flex gap-2 flex-wrap mt-3 sm:mt-0">
 									{post.data.tags.map(tag => (
 										<a
 											href={`/blog?tag=${tag}`}
